fixed textblock quote overflow

--- a/src/sass/components/textblock.scss
+++ b/src/sass/components/textblock.scss
@@ -44,7 +44,7 @@
 	color: $uikit-colour-Primary;
 	max-width: 8.2em;
 	margin: 0.4em 0 2em 0;
-	padding: 0.5em 1em 0.5em 1em;
+	padding: 0.5em 1.2em 0.5em 1em;
 
 	@media (min-width: 970px) {
 		float: right;
